# dspeak

./: Makefile.am  README  autogen.sh  configure.ac  dspeak.pc.in  gdspeak-0.0.pc.in
docs/reference/: Makefile.am
docs/reference/gdspeak/: Makefile.am
dspeak/: Makefile.am  client.c  dspeak-interface.xml  dspeak-server.xml  gdspeak-marshal.list  gdspeak.c  gdspeak.h  main.c  org.tal.gdspeak.service.in  speak.c  speak.h
gdspeak/: Makefile.am  client.c  dspeak-interface.xml  gdbus-speak.c  gdbus-speak.h  gdspeak-interface.xml  gdspeak.c  gdspeak.h  main.c  org.tal.gdspeak.service.in  speak.c
